# scaffold

./: README.org  cookiecutter.json
go-web/: cookiecutter.json
go-web/hooks/: post_gen_project.py
go-web/{{ cookiecutter.project_slug }}/: .env.example  .gitignore  Makefile  README.md  asyncapi.yaml  atlas.hcl  cfg.yaml  docker-compose.yaml  go.mod  go.sum  main.go  sqlc.yaml  swagger.yml
go-web/{{ cookiecutter.project_slug }}/cache/: redis.go
go-web/{{ cookiecutter.project_slug }}/config/: core.go
go-web/{{ cookiecutter.project_slug }}/db/: author_query.sql.go  core.go  models.go  user_query.sql.go
go-web/{{ cookiecutter.project_slug }}/dockerfiles/: dev.dockerfile  prod.dockerfile
js-sdk/: cookiecutter.json
js-sdk/{{ cookiecutter.project_slug }}/: .eslintrc.cjs  package.json  tsconfig.json  vite.config.js
js-web/: cookiecutter.json
js-web/{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  README.org  package.json  tsconfig.json  vite.config.js
py-base/: cookiecutter.json
py-base/custom_extensions/: README.org
py-base/{{ cookiecutter.project_slug }}/: .dockerignore  .gitignore  .pre-commit-config.yaml  README.org  pyproject.toml  shell.py  shell_config.py
py-base/{{ cookiecutter.project_slug }}/bootstrap/: constants.py  core.py
py-base/{{ cookiecutter.project_slug }}/config/: core.py
py-base/{{ cookiecutter.project_slug }}/dockerfiles/: dev.dockerfile  prod.dockerfile
py-base/{{ cookiecutter.project_slug }}/profiler/: README.md  producer.py  pusher.py  sidecar.py
py-base/{{ cookiecutter.project_slug }}/psm/: psm.py
(+27 files in other folders)
