[tool.pyright]
# typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.mypy]
warn_unused_configs = true
no_implicit_reexport = false

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.ruff]
select = ["C", "E", "F", "W", "I"]
fixable = ["A", "B", "C", "D", "E", "F", "W", "I"]
ignore = ["E501", "F403", "E731", "C901"]
line-length = 120


[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.11.6"
pydantic-settings = "^2.1.0"
testcontainers = {extras = ["rabbitmq"], version = "^3.7.1"}
austin-dist = "^3.6.0"
protobuf = ">=3.12,<4.0"

[tool.poetry.group.dev.dependencies]
pytest-benchmark = "^4.0.0"
pytest = "^7.4.3"
ruff = "^0.1.5"
mypy = "^1.7.0"
black = "^23.11.0"
pre-commit = "^3.5.0"
ipython = "^8.17.2"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
